# STM32F4_SYNTH

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
App/Inc/: FreeRTOSConfig.h  audio_task.h  cli_task.h  main.h  midi_task.h  test_task.h
App/Src/: audio_task.c  cli_task.c  cli_usr_cmd.c  freertos.c  main.c  midi_task.c  test_task.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f446xx.h
Lib/SWO/Inc/: TraceRegisters.h  swo.h
Lib/SWO/Src/: swo.c
Lib/Shell/Inc/: shell.h
Lib/Shell/Src/: shell.c
Lib/audio_engine/Inc/: audio_engine.h
Lib/audio_engine/Src/: audio_engine.c
Lib/audio_lib/Inc/: audio_common.h  audio_delay.h  audio_effect.h  audio_engine.h  audio_env_adsr.h  audio_env_ramp.h  audio_envelope.h  audio_filter.h  audio_hal.h  audio_tools.h  audio_wavetable.h
Lib/audio_lib/Src/: audio_delay.c  audio_effect.c  audio_engine.c  audio_env_adsr.c  audio_env_ramp.c  audio_envelope.c  audio_filter.c  audio_hal.c  audio_tools.c  audio_wavetable.c
Lib/midi/Inc/: midi_common.h  midi_lib.h  midi_voice.h
Lib/midi/Src/: midi_lib.c  midi_voice.c
Lib/printf/Inc/: printf_config.h
Lib/wavetable/Inc/: wavetable.h
Lib/wavetable/Src/: wavetable.c
Sys/Sys_Common/Inc/: sys_common.h
Sys/Sys_Common/Src/: sys_common.c
Sys/Sys_Error/Inc/: sys_error.h  user_assert.h
Sys/Sys_Error/Src/: sys_error.c  user_assert.c
Sys/Sys_HAL/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h  sys_adc.h  sys_dac.h  sys_dma.h  sys_gpio.h  sys_i2s.h  sys_mcu.h  sys_tim.h  sys_usart.h
Sys/Sys_HAL/Src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_sys_hal_adc.c  stm32f4xx_sys_hal_dac.c  stm32f4xx_sys_hal_dma.c  stm32f4xx_sys_hal_gpio.c  stm32f4xx_sys_hal_i2s.c  stm32f4xx_sys_hal_mcu.c  stm32f4xx_sys_hal_tim.c  stm32f4xx_sys_hal_usart.c
Sys/Sys_Log/Inc/: sys_log.h
Sys/Sys_Log/Src/: sys_log.c
Tools/pytools/: gen_wavetable.py  midi_serial_test.py
Tools/vscode/: c_cpp_properties.json  launch.json  settings.json  tasks.json
cmake/: arm-none-eabi-gcc.cmake
